# oscapify

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  publish.sh  publish_test.sh  publish_to_pypi.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
oscapify/: __init__.py  cache.py  cli.py  core.py  exceptions.py  models.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_models.py  test_validators.py
tests/data/input/: ans_connectivity_relations_pmc_oai_202410.csv  ans_connectivity_relations_pmc_oai_202411.csv  ans_connectivity_relations_pmc_oai_202505.csv
tests/data/output/: ans_connectivity_relations_pmc_oai_202410-oscapify.csv  ans_connectivity_relations_pmc_oai_202411-oscapify.csv  ans_connectivity_relations_pmc_oai_202505-oscapify.csv  test_output.csv
