[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscapify"
version = "0.1.0"
description = "A robust tool for converting scientific literature CSV files to OSCAP-compatible format"
readme = "README.md"
authors = [
    {name = "Troy Sincomb", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["oscap", "csv", "bioinformatics", "pubmed", "doi"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "platformdirs>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/oscapify"
Repository = "https://github.com/yourusername/oscapify"
Issues = "https://github.com/yourusername/oscapify/issues"

[project.scripts]
oscapify = "oscapify.cli:main"

[tool.setuptools.packages.find]
include = ["oscapify*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "ISC", "PIE", "PT", "RET", "SIM", "ARG"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=oscapify --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["oscapify"]
